--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "@nuxt/image": "^0.4.17",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.2.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -61,7 +62,7 @@
     "imurmurhash": "^0.1.4",
     "mkdirp": "^1.0.4",
     "nuxt-build-optimisations": "^1.0.5",
-    "postcss": "^8.3.5",
+    "postcss": "^8.4.5",
     "prettier": "^2.3.1",
     "remark-cli": "^9.0.0",
     "remark-lint": "^8.0.0",
@@ -73,7 +74,7 @@
     "remark-preset-lint-markdown-style-guide": "^4.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
     "sharp": "^0.28.3",
-    "tailwindcss": "^2.2.4",
+    "tailwindcss": "^3.0.12",
     "unist-util-visit": "^2.0.3"
   }
 }
