--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,17 @@
   "redirects": [
     {
       "source": "/veranstaltungen/3-grenzen-sind-relativ-festival-sa-26-10-19-fabrik-hamburg-2-2/audiovisuelle-impressionen-vom-grenzen-sind-relativ-festival-2017.html",
-      "destination": "https://www.grenzensindrelativ.de/aktivitaeten/projekte-und-veranstaltungen/grenzen-sind-relativ-festivals/1-grenzen-sind-relativ-festival",
+      "destination": "https://leichte-sprache.grenzensindrelativ.de/aktivitaeten/projekte-und-veranstaltungen/grenzen-sind-relativ-festivals/1-grenzen-sind-relativ-festival",
       "permanent": true
     },
     {
       "source": "/ueber-uns/das-team",
-      "destination": "https://www.grenzensindrelativ.de/ueber-uns/das-team/alle",
+      "destination": "https://leichte-sprache.grenzensindrelativ.de/ueber-uns/das-team/alle",
       "permanent": true
     },
     {
       "source": "/ueber-uns",
-      "destination": "https://www.grenzensindrelativ.de/ueber-uns/das-team/alle",
+      "destination": "https://leichte-sprache.grenzensindrelativ.de/ueber-uns/das-team/alle",
       "permanent": true
     }
   ]
