--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt -p 3002",
     "build": "nuxt generate",
     "start": "nuxt start",
     "generate": "nuxt generate",
