--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,17 +6,18 @@
     "editor.wordWrap": "wordWrapColumn",
     "editor.wordWrapColumn": 64,
     "editor.lineNumbers": "off",
-    "editor.quickSuggestions": false,
+    "editor.quickSuggestions": {
+      "comments": "off",
+      "strings": "off",
+      "other": "off"
+    },
     "editor.minimap.enabled": false
   },
   "frontMatter.content.folders": [
     {
       "title": "content",
       "fsPath": "./content",
-      "paths": [
-        "./content",
-        ".\\content"
-      ]
+      "paths": ["./content", ".\\content"]
     }
   ],
   "frontMatter.content.autoUpdateDate": false
